Asset generation working with generic resource crafting input