@@ -13,6 +13,8 @@ package com.CodeCreature.crafting;
 
 import com.CodeCreature.scaling.NaturalResourceRegistry;
 import com.CodeCreature.util.StencilMetadata;
+import com.hypixel.hytale.protocol.ItemResourceType;
+import com.hypixel.hytale.server.core.asset.type.item.config.Item;
 import com.hypixel.hytale.server.core.inventory.ItemStack;
 import com.hypixel.hytale.server.core.inventory.container.CombinedItemContainer;
 
@@ -21,6 +23,7 @@ import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Predicate;
 
 public final class GenericVariantMatcher {
@@ -39,6 +42,7 @@ public final class GenericVariantMatcher {
      *  @status implemented
      *  @node   GenericVariantMatcher#collectVariantAvailability
      */
+    @SuppressWarnings("null")
     @Nonnull
     public static List<VariantAvailability> collectVariantAvailability(@Nonnull GenericIngredientResolution resolution,
                                                                        @Nullable String fallbackItemId,
@@ -48,10 +52,16 @@ public final class GenericVariantMatcher {
         List<VariantAvailability> availability = new ArrayList<>(orderedIds.size());
         int resolverOrder = 0;
         for (String itemId : orderedIds.keySet()) {
+            if (itemId == null || itemId.isBlank()) {
+                continue;
+            }
             int qty = countConcreteItem(container, itemId, excludeStencils);
             availability.add(new VariantAvailability(itemId, qty, resolverOrder++));
         }
-        return List.copyOf(availability);
+        if (availability.isEmpty()) {
+            return List.of();
+        }
+        return java.util.Collections.unmodifiableList(new ArrayList<>(availability));
     }
 
     /** @intent Count total matching quantity for a typed ingredient using the shared concrete-variant matcher semantics.
@@ -92,6 +102,10 @@ public final class GenericVariantMatcher {
         LinkedHashMap<String, Integer> ordered = new LinkedHashMap<>();
         int resolverOrder = 0;
         for (String variantId : resolution.orderedMatchingItemIds()) {
+            if (variantId == null || variantId.isBlank()) {
+                resolverOrder++;
+                continue;
+            }
             String resolved = NaturalResourceRegistry.resolveToGatherableForm(variantId);
             if (!resolved.isEmpty()) {
                 ordered.putIfAbsent(resolved, resolverOrder);
@@ -108,7 +122,38 @@ public final class GenericVariantMatcher {
             ordered.put(NaturalResourceRegistry.resolveToGatherableForm(fallbackItemId), resolverOrder);
         }
 
+        // Include proxy-token items that explicitly declare this resource type so
+        // stencil affordability/consumption can recognize dropped generic proxies.
+        String resourceTypeId = resolution.identity().resourceTypeId();
+        if (resourceTypeId != null && !resourceTypeId.isBlank()) {
+            for (var entry : Item.getAssetMap().getAssetMap().entrySet()) {
+                String itemId = entry.getKey();
+                if (itemId == null || !itemId.startsWith("Plugin_GenericDropProxy_RT_")) {
+                    continue;
+                }
+                Item item = entry.getValue();
+                if (item == null || !itemDeclaresResourceType(item, resourceTypeId)) {
+                    continue;
+                }
+                ordered.putIfAbsent(itemId, resolverOrder++);
+            }
+        }
+
         return ordered;
+    }
+
+    private static boolean itemDeclaresResourceType(@Nonnull Item item,
+                                                    @Nonnull String resourceTypeId) {
+        ItemResourceType[] resourceTypes = item.getResourceTypes();
+        if (resourceTypes == null || resourceTypes.length == 0) {
+            return false;
+        }
+        for (ItemResourceType rt : resourceTypes) {
+            if (rt != null && resourceTypeId.equals(rt.id)) {
+                return true;
+            }
+        }
+        return false;
     }
 
     /** @intent Count one concrete item with optional stencil filtering so planner and direct affordability share identical exclusion semantics.
@@ -123,6 +168,6 @@ public final class GenericVariantMatcher {
         if (excludeStencils) {
             predicate = predicate.and(stack -> !StencilMetadata.isStencil(stack));
         }
-        return container.countItemStacks(predicate);
+        return container.countItemStacks(Objects.requireNonNull(predicate));
     }
 }
